--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,6 +10,7 @@
 }
 body{
     position: relative;
+    min-height: 100vh;
   font-family: 'Public Sans', sans-serif;
   line-height: 1.5;
   overflow-x: hidden;
@@ -30,6 +31,9 @@ body{
                           z-index: 20;
                       
                       }
+                    body .footer,body .info ,body.articles,body .header{
+                        z-index: -1;
+                    }
               &::before{
                 z-index: 1;
                 background-color: rgba($color: #000000, $alpha: 0.2);
@@ -117,8 +121,10 @@ font-weight: 700;
         position: absolute;
         color: c.$DarkBlue;
         bottom: -250px;
+        left: 50%;
         width: 90%;
         padding-block: 1.5rem;
+        transform: translateX(-50%);
         @include c.desktop{
             position: static;
             width: auto;
@@ -158,7 +164,6 @@ font-weight: 700;
 }
 
 .header{
-    z-index: 1;
 padding-top: 30vh;
 padding-bottom: 5rem;
 background-image: url(./images/bg-intro-mobile.svg);
@@ -201,7 +206,7 @@ position: relative;
     
 }
 .info{
-    z-index: -15;
+    position: relative;
     &--container{
         padding-block: 3rem;
         @include c.desktop{
@@ -223,7 +228,7 @@ position: relative;
     }
 }
 .articles{
-    z-index: -15;
+    position: relative;
     &--container{
         padding-block: 5rem;
     }
@@ -253,7 +258,7 @@ text-align: left;
     }
 }
 .footer{
-    z-index: -15;
+    position: relative;
     &--container{
         padding-block: 2rem;
         @include c.flex();
